// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Robot Setup component should render correctly 1`] = `
<div>
  <div
    class="wrapper"
  >
    <h2>
      Set Up Teams
    </h2>
    <div
      class="inputWrapper"
    >
      <input
        placeholder="Team 1 Name"
        type="text"
        value="Team 1"
      />
      <input
        placeholder="Team 2 Name"
        type="text"
        value="Team 2"
      />
    </div>
    <button
      class="btn btn-primary btn-medium"
      type="button"
    >
      Fetch Robots
    </button>
  </div>
</div>
`;

exports[`Robot Setup component should render correctly with setup complete 1`] = `
<div>
  <h2>
    Disco Bar
  </h2>
  <div
    class="wrapper"
  >
    <div
      class="teamWrapper"
    >
      <div>
        <span
          class="teamName"
        >
          Team 
          Team 1
        </span>
      </div>
      <div>
        <span
          class="teamName"
        >
          Team 
          Team 2
        </span>
      </div>
    </div>
    <div
      class="buttonWrapper"
    >
      <button
        class="btn btn-primary btn-medium"
        type="button"
      >
        Start Contest
      </button>
    </div>
  </div>
</div>
`;
